fix(components): removed shadows on small screens

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -98,6 +98,7 @@
 		.footer__row{
 			height: 160px;
 			padding: 0;
+			box-shadow: none;
 			.footer__navigation,
 			.footer__about,
 			.footer__support,
